# Course-module4

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
data/: filtered_vacancies.json
src/: base_api.py  data_file.py  get_vacancies.py  head_hunter_api.py  json_saver.py  main.py  operations_with_vacancies.py  user_interaction.py  utils.py  vacancy.py  vacancy_api.py  vacancy_json.py
tests/: conftest.py  test_data_file.py  test_get_vacancies.py  test_head_hunter_api.py  test_json_saver.py  test_operations_with_vacancies.py  test_user_interaction.py  test_vacancy.py  test_vacancy_json.py
