[tool.poetry]
name = "Course/module4"
version = "0.1.0"
description = ""
authors = ["Sergey <nekrasov-nekras-nekrasov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
texttable = "^1.7.0"
termtables = "^0.2.4"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241126"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
